@@ -14,11 +14,13 @@
 #
 #		- George
 
+C(POSIX)   C,POSIX
 Afrikaans			af_ZA.UTF-8,af_ZA
 Albanian			sq_AL.UTF-8,sq_AL
 Amharic			am_ET.UTF-8,am_ET
 Arabic(Egypt)		ar_EG.UTF-8,ar_EG
 Arabic(Lebanon)		ar_LB.UTF-8,ar_LB
+Arabic(SaudiArabia)		ar_SA.UTF-8,ar_SA
 Armenian		hy_AM.UTF-8,hy_AM
 Azerbaijani		az_AZ.UTF-8,az_AZ
 Azerbaijani(Iran)	az_IR.UTF-8,az_IR
@@ -31,6 +33,7 @@ Breton			br_FR.UTF-8,br_FR
 Bulgarian		bg_BG.UTF-8,bg_BG
 Catalan			ca_ES.UTF-8,ca_ES
 Chinese(ChinaMainland)	zh_CN.UTF-8,zh_CN
+Chinese(GB18030)	zh_CN.GB18030
 Chinese(Hong-Kong)	zh_HK.UTF-8,zh_HK
 Chinese(Singapore)	zh_SG.UTF-8,zh_SG
 Chinese(Taiwan)		zh_TW.UTF-8,zh_TW
@@ -38,23 +41,30 @@ Croatian		hr_HR.UTF-8,hr_HR
 Czech			cs_CZ.UTF-8,cs_CZ
 Danish			da_DK.UTF-8,da_DK
 Dutch			nl_NL.UTF-8,nl_NL
-English(USA)		en_US.UTF-8,en_US
+Dutch(Belgium)			nl_BE.UTF-8,nl_BE
 English(Australia)	en_AU.UTF-8,en_AU
-English(UK)		en_GB.UTF-8,en_GB
 English(Canada)		en_CA.UTF-8,en_CA
 English(Ireland)	en_IE.UTF-8,en_IE
+English(Malta)	en_MT.UTF-8,en_MT
+English(NewZealand)	en_NZ.UTF-8,en_NZ
 English(SouthAfrica)	en_ZA.UTF-8,en_ZA
+English(UK)		en_GB.UTF-8,en_GB
+English(USA)		en_US.UTF-8,en_US
 Esperanto		eo.UTF-8,eo
 Estonian		et_EE.UTF-8,et_EE
 Finnish			fi_FI.UTF-8,fi_FI
 French			fr_FR.UTF-8,fr_FR
 French(Belgium)		fr_BE.UTF-8,fr_BE
+French(Canada)		fr_CA.UTF-8,fr_CA
+French(Luxembourg)		fr_LU.UTF-8,fr_LU
 French(Switzerland)	fr_CH.UTF-8,fr_CH
 Galician		gl_ES.UTF-8,gl_ES
 German			de_DE.UTF-8,de_DE
 German(Austria)		de_AT.UTF-8,de_AT
 German(Switzerland)	de_CH.UTF-8,de_CH
+German(Luxembourg)	de_LU.UTF-8,de_LU
 Greek			el_GR.UTF-8,el_GR
+Greek(Cyprus)			el_CY.UTF-8,el_CY
 Gujarati			gu_IN.UTF-8,gu_IN
 Hebrew			he_IL.UTF-8,he_IL
 Hindi			hi_IN.UTF-8,hi_IN
@@ -76,6 +86,7 @@ Lithuanian		lt_LT.UTF-8,lt_LT
 Macedonian		mk_MK.UTF-8,mk_MK
 Malayalam			ml_IN.UTF-8,ml_IN
 Malay			ms_MY.UTF-8,ms_MY
+Maltese			mt_MT.UTF-8,mt_MT
 Maori			mi_NZ.UTF-8,mi_NZ	
 Marathi			mr_IN.UTF-8,mr_IN
 Mongolian		mn_MN.UTF-8,mn_MN
@@ -92,12 +103,27 @@ Portuguese		pt_PT.UTF-8,pt_PT
 Romanian		ro_RO.UTF-8,ro_RO
 Russian			ru_RU.UTF-8,ru_RU
 Serbian			sr_CS.UTF-8,sr_CS,sr_YU@cyrillic,sr_YU
+Serbian(Bosnia)			sh_BA.UTF-8,sh_BA
 Serbian(Latin)		sr_CS.UTF-8@Latn,sr_CS@Latn,sr_YU@Latn
 Serbian(Jekavian)	sr_CS.UTF-8@ije,sr_CS@ije,sr_YU@ije
 Slovak			sk_SK.UTF-8,sk_SK
 Slovenian		sl_SI.UTF-8,sl_SI
 Spanish			es_ES.UTF-8,es_ES
+Spanish(Argentina)		es_AR.UTF-8,es_AR
+Spanish(Bolivia)		es_BO.UTF-8,es_BO
+Spanish(Chile)		es_CL.UTF-8,es_CL
+Spanish(Colombia)		es_CO.UTF-8,es_CO
+Spanish(CostaRica)		es_CR.UTF-8,es_CR
+Spanish(Ecuador)		es_EC.UTF-8,es_EC
+Spanish(Guatemala)		es_GT.UTF-8,es_GT
 Spanish(Mexico)		es_MX.UTF-8,es_MX
+Spanish(Nicaragua)		es_NI.UTF-8,es_NI
+Spanish(Panama)		es_PA.UTF-8,es_PA
+Spanish(Peru)		es_PE.UTF-8,es_PE
+Spanish(Paraguay)		es_PY.UTF-8,es_PY
+Spanish(ElSalvador)		es_SV.UTF-8,es_SV
+Spanish(Uruguay)		es_UY.UTF-8,es_UY
+Spanish(Venezuela)		es_VE.UTF-8,es_VE
 Swedish(Finland)	sv_FI.UTF-8,sv_FI
 Swedish			sv_SE.UTF-8,sv_SE
 Tagalog			tl_PH.UTF-8,tl_PH
