@@ -1,3 +1,8 @@
+2006-11-02  Brian Cameron  <brian.cameron@sun.com>
+
+	* gui/gdmlanguages.c, config/locale.alias:  Add several new
+	  languages.  Patch provided by Peter Nugent <Peter.Nugent@sun.com>
+
 2006-11-01  Brian Cameron  <brian.cameron@sun.com>
 
 	* docs/C/gdm.xml: Mention that altfile feature is supported
